--- a/main.css
+++ b/main.css
@@ -1,7 +1,9 @@
+@media screen and (max -width : 481px)
 body 
 {
   margin: 0;
   font-family: "Poppins", sans-serif;
+  padding : 1%;
   place-items: grid;
 }
 
